# FP

./: .replit  app.py  multilingual_medical_ai.py  pyproject.toml  replit.md  requirements.txt  simple_app.py  video_analysis_app.py
utils/: audio_processor.py  deepface_processor.py  fusion_model.py  image_processor.py  ml_models.py  multimodal_processor.py  speech_to_text_analyzer.py  text_to_speech.py  translator.py  video_processor.py  whisper_processor.py
