[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "moviepy>=2.2.1",
    "opencv-python-headless>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.1",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "soundfile>=0.13.1",
]
